[package]
name = "emojos-dot-in"
version = "2.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Shows custom emoji for Mastodon/Pleroma instances"
homepage = "https://emojos.in"
repository = "https://github.com/iliana/emojos.in"
publish = false
include = ["/build.rs", "/src", "/static", "/templates", "/LICENSE", ".gitignore"]

[dependencies]
anyhow = "1"
askama = { version = "0.12", default-features = false }
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate", "json"] }
rocket = { version = "0.5.0-rc.3", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }
