[package]
name = "emojos-dot-in"
version = "2.0.0"
edition = "2021"
rust-version = "1.82" # kept in sync with nixos stable
license = "AGPL-3.0-or-later"
description = "Shows custom emoji for Mastodon/Pleroma instances"
homepage = "https://emojos.in"
repository = "https://github.com/iliana/emojos.in"
publish = false
include = ["/build.rs", "/src", "/static", "/templates", "/LICENSE", ".gitignore"]

[dependencies]
askama = { version = "0.12", default-features = false }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "json"] }
rocket = { version = "0.5", default-features = false }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
fs-err = "3.0.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
